Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,6 @@ body {
     height: 100vh;
 }
 
-
 /*Sidebar*/
 .sidebar {
     overflow: hidden;
@@ -370,6 +369,8 @@ body {
 /*Songs*/
 .songs {
     width: calc(100% - 275px);
+    padding-bottom: 75px;
+    overflow: auto;
 }
 
 .section-title {
@@ -381,6 +382,10 @@ body {
     max-width: 100%;
     width: 300px;
     height: 300px;
+}
+
+.central-content {
+    height: calc(100vh - 105px);
 }
 
 .artist {
